# mobdev

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  README.md  check.sh  development.md  migration_completed.md  migration_todo.md  testing.md
.github/workflows/: coverage.yml  lint.yml
docs/: check.md  files.md  git.md
src/: cli.rs  main.rs
src/commands/: check.rs  dart.rs  git.rs  hook.rs  mod.rs  upgrade.rs
src/commands/dart/: dcm.rs
src/commands/files/: filter.rs
src/commands/git/: codeowners.rs
src/commands/hook/: analysis.rs  dcm.rs  fix.rs  format.rs  graphql.rs
src/utils/: dart.rs  files.rs  git.rs  mod.rs  shell.rs
tests/: integration_tests.rs
