[package]
name = "mobdev"
version = "0.15.0"
edition = "2021"
authors = ["Dan Best"]
description = "Mobile developer utility package - Rust implementation of TSU"
license = "MIT"
repository = "https://github.com/bestdan/mobdev"
readme = "README.md"

[[bin]]
name = "mobdev"
path = "src/main.rs"

[[bin]]
name = "mdu"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"
