[package]
name = "mobdev"
version = "0.1.0"
edition = "2021"
authors = ["Dan Egan"]
description = "Mobile developer utility package"
license = "MIT"
repository = "https://github.com/bestdan/mobdev"
readme = "README.md"

[[bin]]
name = "mobdev"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
regex = "1.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"

[package.metadata.tarpaulin]
# Coverage thresholds based on current coverage levels
# Minimum line coverage percentage to pass
line-coverage = 4.5
# Generate HTML report for detailed analysis
out = ["Html", "Stdout"]
# Timeout for tests (in seconds)
timeout = 300
